# rust-timeit

./: .gitignore  Cargo.toml  LICENSE  README.md  pre-build.sh
examples/: half_karatsuba.csv  num_bigint_half_karatsuba.rs  plot_half_karatsuba.py  residuals.csv
src/: lib.rs  measure.rs
