[package]
name = "rust-timeit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
num-bigint-org = { path = "num-bigint-org", features = ["rand"], package = "num-bigint" }
num-bigint-dev = { path = "num-bigint-dev", features = ["rand"], package = "num-bigint" }
num-traits = "0.2"
rand = "0.8"
rand_core = "0.6"
minstant = "0.1"
